# Rustyfin

./: .gitignore  Cargo.toml  Dockerfile  README.md  RUSTFIN_AI_PROJECT_TRACKER.md  Rustyfin_Fixes_Report.md  clippy.toml  docker-compose.gpu.yml  docker-compose.vaapi.yml  docker-compose.yml  prmpt.md
Rustyfin_Setup_Wizard_Package/: .AI_prompt.txt.kate-swp  Rustyfin_Setup_Wizard_Implementation_Progress.md  Rustyfin_Setup_Wizard_Spec_v2.md  rustyfin-setup-wizard.openapi.yaml
crates/core/: Cargo.toml
crates/core/src/: error.rs  types.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial_schema.sql  002_metadata_columns.sql  003_settings_and_setup.sql  004_user_library_access.sql  005_library_settings.sql
crates/db/src/: lib.rs  migrate.rs
crates/db/src/repo/: episodes.rs  idempotency.rs  items.rs  jobs.rs  libraries.rs  media_files.rs  mod.rs  playstate.rs  settings.rs  setup_session.rs  users.rs
crates/metadata/: Cargo.toml
crates/metadata/src/: lib.rs  merge.rs  provider.rs  tmdb.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  parser.rs  scan.rs  subtitles.rs  walk.rs
crates/scanner/tests/: video_extensions.rs
crates/server/: Cargo.toml
crates/server/src/: artwork.rs  auth.rs  error.rs  lib.rs  library_scan.rs  main.rs  routes.rs  state.rs  streaming.rs  user_pipeline.rs
crates/server/src/setup/: guard.rs  handlers.rs  mod.rs  rate_limit.rs  state_machine.rs  validation.rs
crates/server/tests/: integration.rs
crates/transcoder/: Cargo.toml
crates/transcoder/src/: decision.rs  ffprobe.rs  gpu.rs  hls.rs  lib.rs  session.rs
docs/: README.md
docs/prompts/: prmpt.md
docs/reference/rustfin_docs_bundle_v3_extreme_1770980057/: 00_README_INDEX.md  02_UI_UX_SPEC.md  04_API_SPEC.md  06_BACKEND_REST_IMPLEMENTATION.md  07_METADATA_SUBTITLES_ARTWORK_PROVIDERS.md  08_STREAMING_TRANSCODING_GPU.md
docs/setup-wizard/Rustyfin_Setup_Wizard_Package/: AI_prompt.txt  Rustyfin_Jellyfin_Setup_Wizard_Deep_Dive.docx  Rustyfin_Setup_Wizard_Spec_v3_No_Imagination.md  Rustyfin_Setup_Wizard_Spec_v4_OpenAPI_Sequence.md
rustfin_docs_bundle_v3_extreme_1770980057/: 01_ARCHITECTURE_OVERVIEW.md  03_THEME_STYLE_MOTION.md  05_DATABASE_SPEC.md  09_DOCKER_OPS_BUILD_RELEASE.md  10_PROJECT_PLAN_AND_MILESTONES.md  11_TESTING_OBSERVABILITY_SECURITY.md
rustfin_docs_bundle_v3_extreme_1770980057/sources_original/: rustfin_master_spec_extreme_detail.md  rustfin_master_spec_extreme_detail_v2_tv_seasons_missing_docker.md
scripts/: clean_install.sh  clone_clean_sibling.sh  docker-compose-safe.sh  fresh-start.sh  install-tempdir-fix.sh  make_shallow_zip.sh  start.sh  stop.sh
tests/: README.md  bootstrap.sh  package-lock.json  package.json  playwright.config.ts  run-suite.sh  test-all.sh  tsconfig.json
tests/e2e/: accessibility.spec.ts  auth.spec.ts  directory-picker.spec.ts  helpers.ts  libraries.spec.ts  playback.spec.ts  setup.spec.ts  smoke.spec.ts  users-permissions.spec.ts
tests/lib/: assert.sh  harness.sh
tests/suites/: 00_smoke.sh  01_setup.sh  02_auth.sh  03_users_permissions.sh  04_libraries_scanner.sh  05_directory_picker.sh  06_accessibility.sh  07_api_contract.sh  08_playback.sh  90_rust_unit.sh  91_ui_build.sh
ui/: Dockerfile  next.config.js  package-lock.json  package.json
ui/src/: middleware.ts
ui/src/app/: NavBar.tsx  globals.css  layout.tsx  page.tsx
ui/src/app/admin/: page.tsx
ui/src/lib/: api.ts  auth.tsx  setupApi.ts
video fix/: Rustyfin_Playback_Deep_Dive_8024266.md  Rustyfin_Playback_Deep_Dive_Critique_8024266.md  Rustyfin_Playback_Final_Agent_Plan.md  prompt.txt
video fix/.claude/: settings.local.json
watchparty_impliment/: prompt.md  watch_party_agent_overview.md  watch_party_critique_report.md  watch_party_implementation_report.md
(+9 files in other folders)
