[package]
name = "rustfin-metadata"
version = "0.1.0"
edition = "2024"

[dependencies]
rustfin-core = { path = "../core" }
rustfin-db = { path = "../db" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
chrono = { workspace = true }
