[package]
name = "rustfin-scanner"
version.workspace = true
edition.workspace = true

[dependencies]
rustfin-core = { path = "../core" }
rustfin-db = { path = "../db" }
sqlx = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = "1"

[dev-dependencies]


